--- a/docs-web/src/main/webapp/src/partial/docs/document.edit.html
+++ b/docs-web/src/main/webapp/src/partial/docs/document.edit.html
@@ -78,6 +78,16 @@
         </div>
       </div>
 
+      <div class="form-group">
+        <label class="col-sm-2 control-label" for="inputGPA">{{ 'document.gpa' | translate }}</label>
+        <div class="col-sm-10">
+          <input type = "number" name= "inputGPA" min = 0 max = 4>
+          <!--<select-tag tags="document.gpa" ref="inputGPA" ng-disabled="fileIsUploading"></select-tag>-->
+        </div>
+      </div>
+      
+      
+
       <!-- Custom metadata -->
       <div class="form-group"
            ng ng-repeat="meta in document.metadata"
