change gpa type to text

--- a/docs-web/src/main/webapp/src/partial/docs/document.edit.html
+++ b/docs-web/src/main/webapp/src/partial/docs/document.edit.html
@@ -140,7 +140,7 @@
       <div class="form-group">
         <label class="col-sm-2 control-label" for="inputGPA">{{ 'document.gpa' | translate }}</label>
         <div class="col-sm-10">
-          <input required ng-maxlength="100" class="form-control" type="number" id="inputGPA"
+          <input required ng-maxlength="100" class="form-control" type="text" id="inputGPA"
             name="inputGPA" ng-model="document.gpa" autocomplete="off"
             typeahead-wait-ms="200" ng-disabled="fileIsUploading" />
         </div>
